--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
             <h1><a href="index.html">Venida Ramadhani's Website</a></h1>
             <ul>
                 <li class="active"></li><a href="index.html">HOME</a></li>
-                <li><a href="about.html">ABOUT ME</a></li>
-                <li><a href="galery.html">GALLERY</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="https://venidarama65.github.io/ABOUT.html"> ABOUT ME </a></li>
+                <li><a href="https://venidarama65.github.io/gallery.html"> GALLERY </a></li>
+                <li><a href="https://venidarama65.github.io/contact.html"> CONTACT </a></li>
             </ul>
         </div>
     </header>
