--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <h1><a href="index.html">Venida Ramadhani's Website</a></h1>
             <ul>
                 <li class="active"></li><a href="index.html">HOME</a></li>
-                <li><a href="https://venidarama65.github.io/ABOUT.html"> ABOUT ME </a></li>
+                <li><a href="https://venidarama65.github.io/about.html"> ABOUT ME </a></li>
                 <li><a href="https://venidarama65.github.io/gallery.html"> GALLERY </a></li>
                 <li><a href="https://venidarama65.github.io/contact.html"> CONTACT </a></li>
             </ul>
