--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="widt=device-width, initial-scale=1">
         <title> Venida Ramadhani's Website</title>
-        <link rel="stylesheet" type="text/css" href="css veni.css">
+        <link rel="stylesheet" type="text/css" href="veni.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     </head>
     <body>
@@ -12,8 +12,7 @@
 <div class="medsos">
     <div class="container">
         <ul>
-            <li><a href="https://www.instagram.com/kalilanaa/"><i class="fab fa-instagram"></i></a></li>
-			<li><a href="https://tiktok.com/aurkenaa/"><i class="fab fa-tiktok"></i></a></li>
+            <li><a href="https://www.instagram.com/venidaarmd/"><i class="fab fa-instagram"></i></a></li>		
         </ul>
     </div>
 </div>
@@ -49,23 +48,19 @@
 		<th style="background-color: floralwhite"> KETERANGAN </th>
 	</tr> 
 	 <tr>
-                <td>Nama</td>
-                <td>:</td>
+		<td>Nama</td>
                 <td> Venida Ramadhani</td>
             </tr>
             <tr>
                 <td>Tempat Tanggal Lahir</td>
-                <td>:</td>
                 <td>Jakarta, 28 Oktober 2004</td>
             </tr>
             <tr>
                 <td>Alamat</td>
-                <td>:</td>
                 <td> Kelapa Dua Wetan III, Ciracas, Jakarta Timur</td>
             </tr>
             <tr>
                 <td>Pengalaman Pembelajaran Jarak Jauh</td>
-                <td>:</td>
                 <td>
                     <p>
                         Sejak virus covid-19 telah menyerang Indonesia, pemerintah menyarankan kita untuk selalu berada dirumah dan tidak keluar rumah apabila tidak perlu. Dengan begitu, seluruh sekolah diharuskan melakukan pembelajaran jarak jauh/PJJ untuk mencegah penyebaran virus covid-19. Termasuk di SMAKBO. Untuk saya, selama pembelajaran jarak jauh ini banyak hal positif dan negatifnya. Hal positif yang sangat saya rasakan adalah saya dapat lebih merelaxkan diri dan semakin dekat dengan keluarga, saya bisa membantu orangtua serta dapat bermain dengan kakak saya. Saya juga lebih memiliki waktu untuk melakukan hobi dan hal yang saya suka. Selain itu, kondisi pandemic ini membuat saya lebih produktif dimana saya mencoba untuk membuat online shop agar mendapatkan penghasilan karena tidak dapat uang jajan hehehe. Saya juga dapat memiliki waktu belajar yang bebas dan banyak, jadi saya dapat belajar saat saya ingin belajar saja dan memiliki banyak waktu untuk mengulangi pembelajaran yang tidak saya mengerti karena tidak semua pelajaran mengadakan zoom setiap hari.
