--- a/gallery.html
+++ b/gallery.html
@@ -46,6 +46,10 @@
     </section>
 
     <div class="gallery">
+        <img src="foto9.jpeg">
+    </div>
+
+    <div class="gallery">
         <img src="foto1.jpeg">
     </div>
 
@@ -62,27 +66,23 @@
     </div>
 
     <div class="gallery">
+        <img src="foto10(2).jpeg">
+    </div>
+	
+	<div class="gallery">
+        <img src="foto8(2).jpeg">
+    </div>
+
+    <div class="gallery">
         <img src="foto5.jpeg">
     </div>
 
     <div class="gallery">
         <img src="foto6.jpeg">
     </div>
-	
-	<div class="gallery">
+
+    <div class="gallery">
         <img src="foto7.jpeg">
-    </div>
-
-    <div class="gallery">
-        <img src="foto8.jpeg">
-    </div>
-
-    <div class="gallery">
-        <img src="foto9.jpeg">
-    </div>
-
-    <div class="gallery">
-        <img src="foto10.jpeg">
     </div>
 
     </body>
